faut faire sur la moyenne sinon ca pue je pense

--- a/analyse.html
+++ b/analyse.html
@@ -169,17 +169,14 @@ $(document).ready(function () {
 ## 6:     mod          3  98.43062 61.38993
 ## 7: vanilla          4  11.10648 10.01496
 ## 8:     mod          4  65.42028 37.66562</code></pre>
-<pre><code>##               Df   Sum Sq Mean Sq F value Pr(&gt;F)    
-## MyMod          1  1670477 1670477   461.8 &lt;2e-16 ***
-## Residuals   2831 10239958    3617                   
-## ---
-## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
+<pre><code>##             Df Sum Sq Mean Sq F value Pr(&gt;F)
+## MyMod        1   5599    5599   1.848  0.223
+## Residuals    6  18178    3030</code></pre>
 </div>
 <div id="idees-fit" class="section level3">
 <h3>Idees fit :</h3>
 <ul>
 <li>distance parcourue en fonction du mod</li>
-<li>distance par rapport au barycentre en fonction du mod</li>
 </ul>
 </div>
 <div id="idees-descriptif" class="section level3">
